second commit: inladen van de test json file en die laten printen in logcat. Volgende stap is het printen van je juiste json file in logcat en die dan in de recyclerview (secondFragment) tonen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.glascontainers">
 
-    //toestemming geven
+<!--    toestemming geven-->
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -27,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<!--        <meta-data android:name="com.google.android.geo.API_KEY"-->
+<!--            android:value="gcfdjdgjvk">-->
+
+<!--        </meta-data>-->
     </application>
 
 </manifest>
