fifth commit: Met een beetje geluk zou het nu moeten gelukt zijn om door de locaties te loopen en die met de drawLocations() methode op een kaart te tonen. Zoals vaker gebeurt werkt de emulator niet meer dus ik heb het nog niet kunnen testen.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,10 @@
             </intent-filter>
         </activity>
 
-<!--        <meta-data android:name="com.google.android.geo.API_KEY"-->
-<!--            android:value="gcfdjdgjvk">-->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCEr5a7acVhgR_hu9YGu2ttaxc7rIi9f1c">
 
-<!--        </meta-data>-->
+        </meta-data>
     </application>
 
 </manifest>
